# martel-integration-testing

./: .gitignore  README.md  pyproject.toml
martel_print_mech_analyser/: __init__.py  __main__.py  ltpd245.py  print_mech_analyser.py  printout.py  printout_generation.py
martel_print_mech_analyser/signal_analyser/: __init__.py  digilent_digital_discovery.py  saleae_logic8.py  signal_analyser.py
martel_printer/: __init__.py  common_types.py  debug_protocol_helper.py  martel_protocol_helper.py  printer.py
martel_printer/command_set/: __init__.py  common.py  debug_protocol.py  hp_protocol.py  martel_protocol.py
martel_printer/comms/: __init__.py  infrared.py  interface.py  rs232.py  usb.py
martel_printer_test_lib/: __init__.py  __main__.py  analyser.py  printer.py  printer_mech.py  printout.py  printout_matching.py  test_printer_mech.py
martel_printer_test_lib/comms/: __init__.py  infrared.py  interface.py  rs232.py  tcu.py  usb.py
martel_printer_test_lib/mech/: print_mech_analyser.py  printout_generation.py  signal_analyser.py
martel_printer_test_library/: __init__.py  environment.py  printer.py  printer_debug.py  printout.py  printout_capture.py  printout_matching.py  setup.py  tcu_test_library.py
martel_printer_test_library/tcu/: __init__.py  (+2 more)
martel_tcu/: __init__.py  tcu.py  tcu_comms.py  types.py
sample_generation/: __init__.robot  character_sets.robot  sample_generation.robot
tests/: conftest.py  test_baud.py  test_font.py
testsuite/: __init__.robot  config_options.resource  configuration_options.resource  default_font.robot  infrared_baud_rate.robot  infrared_frame_format.robot  rs232.robot  rs232_baud_rate.robot  rs232_frame_format.robot  samples.resource  utils.resource
testsuite_integration/: __init__.robot
testsuite_pcb/: __init__.robot  test_comms.robot  test_firmware.robot  test_off_current.robot  test_power.robot  test_self.robot  utilities.resource
testsuite_samples/: __init__.robot  samples.resource
(+34 files in other folders)
