[tool.poetry]
name = "martel_printer_test_lib"
version = "0.1.0"
description = ""
authors = ["Ryan Sullivan <ryansully96@googlemail.com>"]
readme = "README.md"
packages = [{include = "martel_printer_test_lib", from = "."}]

[tool.poetry.dependencies]
python = "^3.10"
pywin32 = "^304"
pyserial = "^3.5"
robotframework = "^5.0.1"
pytesseract = "^0.3.10"
logic2-automation = "^1.0.2"
opencv-python = "^4.6.0.66"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

