[tool.poetry]
name = "martel_printer_test_library"
version = "0.1.0"
description = ""
authors = ["Ryan Sullivan <ryansully96@googlemail.com>"]
readme = "README.md"
packages = [{include = "martel_printer_test_library", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
pywin32 = "^304"
pyserial = "^3.5"
robotframework = "^6.0.1"
logic2-automation = "^1.0.2"
opencv-python = "^4.6.0.66"
numpy = "^1.23.4"
pydwf = "^1.1.10"
robotframework-tidy = "^3.3.3"

[tool.poetry.dev-dependencies]
ruff = "^0.0.254"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

